Logs added
Log4j added and tests refactored